[레거시 코드 리팩터링 - 2단계] 이스트(신동훈) 미션 제출합니다. (#328)
* refactor(build.gradle): 자바 11 설정으로 변경

* refactor(product): 비즈니스로직을 도메인 객체로 위임 및 jpa 마이그레이션

* refactor(menugroup): jpa 마이그레이션 및 요청 응답 dto 사용으로 변경

* refactor(menu): jpa 마이그레이션 및 비즈니스 로직 도메인으로 위임

* refactor(ordertable): jpa 마이그레이션 및 비즈니스 로직 도메인으로 위임

* refactor(tabplegroup): jpa 마이그레이션 및 비즈니스 로직 도메인으로 위임

* refactor(order): jpa 마이그레이션 및 비즈니스 로직 도메인으로 위임

* fix(order): orderStatus를 enum으로 탐색하도록 변경

* fix(order): ungroup 메서드에서 orderStatus를 enum으로 탐색하도록 변경

* test(order): 픽스쳐 사용 변경

* refactor(ordertable): 패키지 구조 변경

* fix: response 클래스에 빠진 getter 추가

* fix: response 필드 이름 수정

* refactor(MenuService): 모호한 메서드명 수정

* refactor(OrderService): 메뉴 수를 탐색하는 쿼리를 삭제해 쿼리수 감소

* refactor(tableGroup): 테이블개수를 검증하는 로직 도메인으로 위임