@@ -1,4 +1,4 @@
-package kitchenpos.application;
+package kitchenpos.application.order;
 
 import static kitchenpos.support.fixture.OrderTableFixture.createEmptyStatusTable;
 import static kitchenpos.support.fixture.OrderTableFixture.createNonEmptyStatusTable;
@@ -8,9 +8,11 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 import kitchenpos.domain.Order;
 import kitchenpos.domain.OrderLineItem;
 import kitchenpos.domain.OrderStatus;
+import kitchenpos.domain.OrderTable;
 import kitchenpos.support.IntegrationTest;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -23,13 +25,14 @@ class OrderServiceTest extends IntegrationTest {
     @Autowired
     private OrderService orderService;
 
-    private Long nonEmptyOrderTableId;
+    private OrderTable nonEmptyOrderTable;
     private OrderLineItem orderLineItem;
 
     @BeforeEach
     void setupFixture() {
-        nonEmptyOrderTableId = orderTableDao.save(createNonEmptyStatusTable()).getId();
-        orderLineItem = new OrderLineItem(null, menu.getId(), 1L);
+        nonEmptyOrderTable = orderTableDao.save(createNonEmptyStatusTable());
+        final Order order = Order.newOrder(nonEmptyOrderTable);
+        orderLineItem = new OrderLineItem(order, menu, 1L);
     }
 
     @DisplayName("주문 생성 기능")
@@ -39,19 +42,21 @@ class OrderServiceTest extends IntegrationTest {
         @DisplayName("정상 작동")
         @Test
         void create() {
-            final Order order = new Order(nonEmptyOrderTableId, null, null, List.of(orderLineItem));
+            final OrderRequest orderRequest = new OrderRequest(nonEmptyOrderTable.getId(),
+                    List.of(new OrderLineItemRequest(orderLineItem.getMenu().getId(), orderLineItem.getQuantity())));
 
-            final Order savedOrder = orderService.create(order);
+            final OrderResponse orderResponse = orderService.create(orderRequest);
 
-            assertThat(savedOrder.getId()).isNotNull();
+            final Optional<Order> savedOrder = orderDao.findById(orderResponse.getId());
+            assertThat(savedOrder).isPresent();
         }
 
         @DisplayName("주문메뉴가 존재하지 않는 요청일 경우 예외가 발생한다.")
         @Test
         void create_Exception_NonExistOrderLineItem() {
-            final Order order = new Order(nonEmptyOrderTableId, null, null, Collections.emptyList());
+            final OrderRequest orderRequest = new OrderRequest(nonEmptyOrderTable.getId(), Collections.emptyList());
 
-            assertThatThrownBy(() -> orderService.create(order))
+            assertThatThrownBy(() -> orderService.create(orderRequest))
                     .isInstanceOf(IllegalArgumentException.class)
                     .hasMessage("주문메뉴가 존재하지 않습니다.");
         }
@@ -59,10 +64,10 @@ class OrderServiceTest extends IntegrationTest {
         @DisplayName("주문받은 메뉴가 실제 저장되어 있는 메뉴에 속하지 않는다면 예외가 발생한다.")
         @Test
         void create_Exception_NotExistMenu() {
-            final OrderLineItem orderLineItem = new OrderLineItem(null, Long.MAX_VALUE, 1L);
-            final Order order = new Order(nonEmptyOrderTableId, null, null, List.of(orderLineItem));
+            final OrderLineItemRequest orderLineItemRequest = new OrderLineItemRequest(Long.MAX_VALUE, 1L);
+            final OrderRequest orderRequest = new OrderRequest(nonEmptyOrderTable.getId(), List.of(orderLineItemRequest));
 
-            assertThatThrownBy(() -> orderService.create(order))
+            assertThatThrownBy(() -> orderService.create(orderRequest))
                     .isInstanceOf(IllegalArgumentException.class)
                     .hasMessage("주문받은 메뉴가 실제 저장되어 있는 메뉴에 속하지 않습니다.");
         }
@@ -70,9 +75,10 @@ class OrderServiceTest extends IntegrationTest {
         @DisplayName("주문테이블이 존재하지 않으면 예외가 발생한다.")
         @Test
         void create_Exception_NonExistsOrderTable() {
-            final Order order = new Order(Long.MAX_VALUE, null, null, List.of(orderLineItem));
+            final OrderRequest orderRequest = new OrderRequest(Long.MAX_VALUE,
+                    List.of(new OrderLineItemRequest(orderLineItem.getMenu().getId(), orderLineItem.getQuantity())));
 
-            assertThatThrownBy(() -> orderService.create(order))
+            assertThatThrownBy(() -> orderService.create(orderRequest))
                     .isInstanceOf(IllegalArgumentException.class)
                     .hasMessage("주문테이블이 존재하지 않습니다.");
         }
@@ -81,9 +87,10 @@ class OrderServiceTest extends IntegrationTest {
         @Test
         void create_Exception_EmptyOrderTable() {
             final Long emptyOrderTableId = orderTableDao.save(createEmptyStatusTable()).getId();
-            final Order order = new Order(emptyOrderTableId, null, null, List.of(orderLineItem));
+            final OrderRequest orderRequest = new OrderRequest(emptyOrderTableId,
+                    List.of(new OrderLineItemRequest(orderLineItem.getMenu().getId(), orderLineItem.getQuantity())));
 
-            assertThatThrownBy(() -> orderService.create(order))
+            assertThatThrownBy(() -> orderService.create(orderRequest))
                     .isInstanceOf(IllegalArgumentException.class)
                     .hasMessage("주문테이블이 주문을 받을수 없는 상태입니다.");
         }
@@ -96,11 +103,15 @@ class OrderServiceTest extends IntegrationTest {
         @DisplayName("저장된 주문상태가 계산완료이면 예외가 발생한다.")
         @Test
         void changeOrderStatus_Exception_CompletionStatus() {
-            final Long savedOrderId = orderDao.save(
-                    new Order(nonEmptyOrderTableId, OrderStatus.COMPLETION.name(), LocalDateTime.now(), List.of(orderLineItem))).getId();
-            final Order order = new Order(null, OrderStatus.MEAL.name(), null, null);
+            final Order order = new Order(nonEmptyOrderTable, OrderStatus.COMPLETION, LocalDateTime.now(),
+                    Collections.emptyList());
+            final OrderLineItem orderLineItem = new OrderLineItem(order, menu, 1L);
+            order.changeOrderLineItems(List.of(orderLineItem));
+            final Long savedOrderId = orderDao.save(order).getId();
+            final ChangeOrderStatusRequest changeOrderStatusRequest = new ChangeOrderStatusRequest(
+                    OrderStatus.MEAL.name());
 
-            assertThatThrownBy(() -> orderService.changeOrderStatus(savedOrderId, order))
+            assertThatThrownBy(() -> orderService.changeOrderStatus(savedOrderId, changeOrderStatusRequest))
                     .isInstanceOf(IllegalArgumentException.class)
                     .hasMessage("주문상태가 이미 식사완료면 상태를 바꾸지 못합니다.");
         }
@@ -108,9 +119,10 @@ class OrderServiceTest extends IntegrationTest {
         @DisplayName("상태를 변경하려는 주문이 저장되어 있지 않으면 예외가 발생한다.")
         @Test
         void changeOrderStatus_Exception_NonExistOrder() {
-            final Order order = new Order(null, OrderStatus.MEAL.name(), null, null);
+            final ChangeOrderStatusRequest changeOrderStatusRequest = new ChangeOrderStatusRequest(
+                    OrderStatus.MEAL.name());
 
-            assertThatThrownBy(() -> orderService.changeOrderStatus(1000L, order))
+            assertThatThrownBy(() -> orderService.changeOrderStatus(1000L, changeOrderStatusRequest))
                     .isInstanceOf(IllegalArgumentException.class)
                     .hasMessage("저장되어 있지 않은 주문입니다.");
         }
